Fix jQuery in script.js to amend the css relating to index.html.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,13 +45,17 @@ body {
 /*---------------------------------------------------- Colours */
 
 .azure-blue {
-  filter: hue-rotate(280deg);
+  filter: hue-rotate(320deg);
 }
 
 .passion-purple {
-  filter: hue-rotate(320deg);
+  filter: hue-rotate(280deg);
 }
 
 .blaze-red {
   filter: hue-rotate(0deg);
+}
+
+.jewel-green {
+  filter: hue-rotate(120deg);
 }
