--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,7 @@ body {
 .form-container {
   width: 75%;
   margin: 0 auto;
-  /*border: solid #676767 2px; */
+  margin-bottom: 20px;
 }
 
 #email-form {
@@ -82,3 +82,94 @@ body {
   filter: hue-rotate(150deg);
 }
 
+/* -------------------------------------------------- footer */
+
+
+
+@import url(https://fonts.googleapis.com/css?family=Raleway);
+
+/* Colors */
+
+
+* {
+  margin: 0;
+  padding: 0;
+  /*@include box-sizing(border-box); */
+}
+
+
+
+footer {
+  width: 100%;
+  display: inline-block;
+  margin-top: 2em 0;
+  height: 70px;
+  background-color: #696969;
+}
+.copyright {
+    width: 50%;
+    float: left;
+    /*@media (max-width: 600px) {
+      width: 100%; 
+    }*/
+}
+
+footer p {
+      padding-left: 10%;
+      color: white;
+      font-size: 0.7em;
+      line-height: 70px;
+      text-transform: capitalize;
+      letter-spacing: 1px;
+      margin-bottom: 0;
+      /*@media (max-width: 600px) {
+        text-align: center;
+        padding: 0; } */
+}
+
+.social {
+      width: 50%;
+      float: right;
+   /* @media (max-width: 600px) {
+      width: 100%;
+  } */
+}
+.social a {
+      float: left;
+      line-height: 70px;
+      text-decoration: none;
+      color: white;
+      text-align: center;
+      font-weight: bold; 
+      /*@include transition(all, 0.3s);
+       &:hover {
+         background-color: #222;
+         @include transition(all, .3s);
+       } */
+}
+
+
+.linked {
+  background-color: blue;
+  font-size: inherit;
+  width: 20%;
+}
+
+.face {
+  background-color: lightblue;
+  font-size: inherit;
+  width: 20%;
+}
+
+.tweet {
+  background-color: blueviolet;
+  font-size: inherit;
+  width: 20%;
+  
+}
+
+.support {
+  background-color: green;
+  font-size: 0.8em;
+  width: 40%;
+}
