Add a resetDetails function and button, allowing the user to clear their previous details which have been stored, if they wish to.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -254,3 +254,10 @@ footer p {
   border-bottom: none;
   }
 }
+
+@media screen and (max-width: 700px) {
+ .main-image-container {
+  width: 90%;
+  height: 60vw;
+  }
+}
