--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,8 @@
 .navbar {
   color: darkblue;
   font-family: "Architects Daughter", sans-serif;
+  background: rgba(255, 255, 255, 0.5);
+
 }
 
 .navbar-brand {
@@ -19,6 +21,7 @@ body {
   background-size: cover;
   background-color: #cccccc;
   background-position: center;
+  padding-top: 50px;
 }
 
 #menu {
@@ -37,6 +40,7 @@ letter-spacing: 4px;
   margin-right: 30px;
   float: left;
   color: darkblue;
+  
 }
 
 #menu a {
@@ -60,6 +64,7 @@ letter-spacing: 4px;
 .about-container {
   border: solid 1px black;
   border-radius: 3px;
+  width: 75%;
 }
 
 .colour-pick-text {
@@ -95,11 +100,16 @@ letter-spacing: 4px;
 
 /*---------------------------------------------------- Icons */
 
-i {
+.details-icon {
   font-size: 40pt;
   padding-top: 10px;
   padding-bottom: 10px;
   color: rebeccapurple;
+}
+
+.navbar-toggler-icon {
+  color:#676767; 
+  font-size: 28px;
 }
 
 
@@ -248,10 +258,28 @@ footer p {
   width: 40%;
 }
 
+/* -------------------------------------- Push Transitions */
+
+.push{
+    transition: transform 0.5s;
+    transform: translate(0px, 160px);
+}
+
+pushUp{
+  transition: transform 0.5s;
+  transform: translate(0px, 0px);
+}
+
 
 @media screen and (max-width: 990px) {
  #menu a:hover {
   border-bottom: none;
+  }
+  .navbar-toggler-icon  {
+    font-size: 18px;
+  }
+  .navbar-brand {
+    font-size: 28pt;
   }
 }
 
