Add buttons above main image on index.html to change css classes. This should be more user friendly than the dropdown and can be styled.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,6 +133,12 @@ letter-spacing: 4px;
   font-size: 28px;
 }
 
+/*----------------------------------------------------- Buttons */
+
+.colour-buttons {
+  text-align: center;
+}
+
 
 /*---------------------------------------------------- Colours */
 
