--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,7 +242,7 @@ letter-spacing: 4px;
 footer {
   width: 100%;
   display: inline-block;
-  margin-top: 2em 0;
+  margin-top: 16px 0;
   height: 70px;
   background-color: #696969;
   position: absolute;
