Add additional media query styling to style.css. Additional change to index.html to reflect amendments requested by validation programs.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -350,3 +350,12 @@ pushUp{
   width: 93.5%;
   }
 }
+
+@media screen and (max-width: 500px) {
+  .btn-success {
+  margin-top: 5px;
+  }
+  .main-image-overlay {
+  width: 92.5%;
+  }
+}
