--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,7 +256,7 @@ body {
 footer {
   width: 100%;
   display: inline-block;
-  margin-top: 16px 0;
+  margin-top: 0;
   height: 70px;
   background-color: #696969;
   position: absolute;
